--- a/Regressão/Apartamentos SP/Modelo.ipynb
+++ b/Regressão/Apartamentos SP/Modelo.ipynb
@@ -20,7 +20,9 @@
    "metadata": {},
    "source": [
     "O dataset usado foi obtido por meio do Kaggle, porém ele não está mais disponível.                                                                                                         \n",
-    "A análise desse dataset já foi feita por mim [aqui](https://bitbucket.org/joseestevan/overview/src/master/Apartamentos%20SP/).                                                             Por conta disso, irei pular a parte da análise exploratória e focar no modelo."
+    "A análise desse dataset já foi feita por mim [aqui](https://nbviewer.jupyter.org/github/JoseEstevan/Notebooks/blob/main/Apartamentos%20SP/Apartamentos%20SP.ipynb).                      \n",
+    "\n",
+    "Por conta disso, irei pular a parte da análise exploratória e focar no modelo."
    ]
   },
   {
